@@ -4,13 +4,16 @@
     <meta name="Info" value="Part of the feynML test suite"/>
   </head>
   <diagram>
-    <vertex id="v1" x="-1" y="0"/>
-    <vertex id="v2" x="1" y="0"/>
+    <vertex id="v1" x="-1" y="0" label="$xx$"/>
+    <vertex id="v2" x="1" y="0" style="mark-shape:circle;mark-size:0.1;"/>
     <leg id="l1" x="-2" y="0" target="v1" type="fermion"/>
     <leg id="l2" x="2" y="0" target="v2" type="fermion"/>
     <propagator id="p1" source="v1" target="v2" type="photon" bend="1"/>
-    <propagator id="p2" source="v2" target="v1" type="fermion"/>
-    <blob id="blob0" x="0" y="0" shape="circle" />
+    <blob id="blob0" x="0" y="0" shape="circle" radius="0.5" label="$\Sigma$"/>
+    <connect id="b0c1" blob="blob0" dir="w" />
+    <connect id="b0c2" blob="blob0" dir="e" />
+    <propagator id="p2" source="v1" target="b0c1" type="fermion"/>
+    <propagator id="p3" source="b0c2" target="v2" type="fermion"/>
   </diagram>
 </feynml>
 
